<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/heroImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/hero_title"/>

            <View
                android:id="@+id/heroOverlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_overlay"/>

        </FrameLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="0dp"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    android:title="@string/home_title"
                    android:titleTextColor="@color/textPrimary"
                    app:titleTextColor="@color/textPrimary"
                    app:navigationIcon="@drawable/ic_menu"
                    app:navigationIconTint="@color/textPrimary"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/heroContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/spacing_large"
                    android:paddingEnd="@dimen/spacing_large"
                    android:paddingTop="32dp"
                    android:paddingBottom="@dimen/spacing_large"
                    app:layout_constraintTop_toBottomOf="@id/toolbar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:id="@+id/heroTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/hero_title"
                        android:textAppearance="@style/TextAppearance.App.HeroTitle"
                        android:lineSpacingMultiplier="1.2"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <TextView
                        android:id="@+id/heroSubtitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/hero_subtitle"
                        android:textAppearance="@style/TextAppearance.App.HeroSubtitle"
                        android:layout_marginTop="12dp"
                        android:lineSpacingMultiplier="1.3"
                        app:layout_constraintTop_toBottomOf="@id/heroTitle"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/menuRecycler"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:paddingTop="@dimen/spacing_medium"
                    android:paddingStart="@dimen/spacing_medium"
                    android:paddingEnd="@dimen/spacing_medium"
                    android:paddingBottom="32dp"
                    android:nestedScrollingEnabled="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/heroContent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/drawer_menu"
        app:itemIconTint="@color/textPrimary"
        app:itemTextColor="@color/textPrimary"
        app:itemBackground="@color/csgoSurface"
        app:itemRippleColor="@color/csgoAccent"/>

</androidx.drawerlayout.widget.DrawerLayout>
